@@ -228,7 +228,8 @@ TOKEN :
 |
   < FLOATING_POINT_LITERAL:
   ("-")?
-    ( <DECIMAL_FLOATING_POINT_LITERAL> | <HEXADECIMAL_FLOATING_POINT_LITERAL> )
+    ( "NaN" | "Infinity" |
+      <DECIMAL_FLOATING_POINT_LITERAL> | <HEXADECIMAL_FLOATING_POINT_LITERAL> )
   >
 |
   < #DECIMAL_FLOATING_POINT_LITERAL:
