@@ -14,6 +14,11 @@ Avro 1.6.2 (unreleased)
     AVRO-953. Python: Permit users to override HTTP path in RPC.
     (Craig Landry via cutting)
 
+    AVRO-972. Java: Add support for Infinity and NaN as default values
+    for float and double.  Since JSON does not permit these as numeric
+    types, we use the strings "NaN", "Infinity" and "-Infinity" in
+    schemas.  These are also permitted in IDL.  (cutting)
+
   BUG FIXES
 
     AVRO-962. Java: Fix Maven plugin to support string type override.
